# imaginary-agents

./: .gitignore  README.md  ecosystem.config.js  pyproject.toml
api/: create_admin_user.py  server.py
api/auth/: __init__.py  auth_manager.py
api/models/: __init__.py  agent.py  api_key.py  llm_config.py  user.py
api/routes/: agents.py  browser_use.py  crawler_agent.py  llm_configs.py  orchestrator_agent.py  tg_bots.py  users.py  webhooks.py
api/tests/: conftest.py  test_agent.py  test_llm_config.py  test_user.py
config/: __init__.py  db.py  settings.py
database/: database.py
imaginary_agents/: context_providers.py  main.py
imaginary_agents/agents/: basic_agent.py  chatbot_agent.py  cm_orchestrator.py  community_manager_agent.py  memecoin_lore_agent.py  metaspod_agent.py  operate_dot_fun.py  orchestrator.py  simple_agent.py
imaginary_agents/database/: chatbot_db.py
imaginary_agents/database/test/: chatbot_db_test.py
imaginary_agents/helpers/: encription_helper.py
imaginary_agents/tg_bots/: bot.py  bot_manager.py  commands.py  community_manager_bot.py  db.py  operate_dot_fun_bot.py  telegram_agent_bot.py
imaginary_agents/tg_bots/examples/: tg_bot_example.py
imaginary_agents/tg_bots/utils/: process_AI_agent_response.py
imaginary_agents/tools/: __init__.py  browser_use_tool.py  crawler_tool.py  memecoin_descriptions_tool.py  pump_dot_fun_trends_tool.py
imaginary_agents/x_bots/: README.md  metaspod_x_bot.py  x_bot_example.py
imaginary_agents/x_bots/examples/: x_bot_example.py
