[project]
name = "imaginary-agents"
version = "0.1.0"
description = "A Collection of imaginary AI Agents"
authors = [
    {name = "orchidtexture"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "openai (>=1.60.1,<2.0.0)",
    "atomic-agents (>=1.0.17,<2.0.0)",
    "pytelegrambotapi (>=4.26.0,<5.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "twikit (>=2.2.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
