[project]
name = "imaginary-agents"
version = "0.1.0"
description = "A Collection of imaginary AI Agents"
authors = [
    {name = "orchidtexture"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "openai (>=1.60.1,<2.0.0)",
    "atomic-agents (>=1.0.17,<2.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "tweepy (>=4.15.0,<5.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pyngrok (>=7.2.3,<8.0.0)",
    "pymongo (>=4.11,<5.0)",
    "pytelegrambotapi (>=4.26.0,<5.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "crawl4ai (>=0.5.0.post4,<0.6.0)",
    "steel-sdk (>=0.1.0b11,<0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
